--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Membership Plans</title>
     <link rel="stylesheet" href="./styles/plans.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -13,7 +14,7 @@
         <label for="check" class="checkbtn">
             <i class="fas fa-bars"></i>
         </label>
-        <label class="logo"><a href="#"><img src="./images/logo.png" class="fclogo" alt="Logo"></a></label>
+        <label class="navb-items"><a href="#"><img src="./images/logo.png" class="fclogo" alt="Logo"></a></label>
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Products</a></li>
