--- a/index.html
+++ b/index.html
@@ -49,11 +49,14 @@
                         <span class="feature-highlight">Access to Community</span>
                         <p>Join a vibrant fitness community that motivates and inspires. Share your progress, exchange tips, and stay connected with like-minded individuals. Together, we achieve more!</p>
                     </div>
-                    <div class="join-now">
+                    <div class="plan1-img">
+                      <div class="join-now">
                         <a href="#" class="join">Join Now</a>
+                      </div>
+                      <img src="./images/plan1.png" class="basic-plan">
                     </div>
                 </div>
-                <img src="./images/plan1.png" class="basic-plan">
+                
             </div>
 
             <div class="plan-row dark">
@@ -77,11 +80,14 @@
                         <span class="feature-highlight">Access to Supplements</span>
                         <p>Enhance your fitness journey with access to high-quality supplements. Fuel your workouts and recovery with the right nutrients. Enjoy exclusive deals on the products that support your goals!</p>
                     </div>
+                    <div class="plan2-img">
                     <div class="join-now">
                         <a href="#" class="join">Join Now</a>
                     </div>
+                    <img src="./images/plan2.png" class="premium-plan">
+                    </div>
                 </div>
-                <img src="./images/plan2.png" class="premium-plan">
+                
             </div>
 
             <div class="plan-row">
@@ -105,11 +111,13 @@
                         <span class="feature-highlight">Access to SPA</span>
                         <p>Unwind after your workout with access to our luxurious spa. Relax your muscles, reduce stress, and rejuvenate your body. Enjoy a holistic approach to fitness and wellness!</p>
                     </div>
+                    <div class="plan1-img">
                     <div class="join-now">
                         <a href="#" class="join">Join Now</a>
                     </div>
+                    <img src="./images/plan3.png" class="basic-plan">
+                    </div>
                 </div>
-                <img src="./images/plan3.png" class="basic-plan">
             </div>
         </div>
     </main>
